--- a/你不知道的JavaScript-笔记/2.词法作用域.md
+++ b/你不知道的JavaScript-笔记/2.词法作用域.md
@@ -1,6 +1,6 @@
 # 2.词法作用域
 #### 作用域的一种工作模型，词法作用域就是定义在词法阶段的作用域
-#### 2.1词法阶段
+### 2.1词法阶段
 * 作用域查找会在找到第一个匹配的标识符时停止。在多层的嵌套作用域中可以定义同名的标识符，这叫做“遮蔽效应”（内部的标识符“遮蔽”了外部的标识符）。
 * 抛开遮蔽效应，作用域查找始终从运行时所处的最内部作用域开始，逐级向外或者说向上进行，直到遇见第一个匹配的标识符为止。
 ~~~ JavaScript
@@ -17,7 +17,7 @@ foo( 2 ); // 2, 4, 12
 window.a 通过这种技术可以访问那些被同名变量所遮蔽的全局变量。但非全局的变量如果被遮蔽了，无论如何都无法被访问到。
 * 无论函数在哪里被调用，也无论它如何被调用，它的词法作用域都只由函数被声明时所处的位置决定。
 * 词法作用域查找只会查找一级标识符，如果代码中引用了 foo.bar.baz，词法作用域查找只会试图查找 foo 标识符，找到这个变量后，对象属性访问规则会分别接管对 bar 和 baz 属性的访问。
-#### 2.2欺骗词法
+### 2.2欺骗词法
 ##### 修改词法作用域。欺骗词法作用域会导致性能下降。
 #### eval(string) 
 string中含有要计算的 JavaScript 表达式或要执行的语句。
