--- a/你不知道的JavaScript-笔记/2.词法作用域.md
+++ b/你不知道的JavaScript-笔记/2.词法作用域.md
@@ -1,7 +1,7 @@
 # 2.词法作用域
 #### 作用域的一种工作模型，词法作用域就是定义在词法阶段的作用域
 ### 2.1词法阶段
-* 作用域查找会在找到第一个匹配的标识符时停止。在多层的嵌套作用域中可以定义同名的标识符，这叫做“遮蔽效应”（内部的标识符“遮蔽”了外部的标识符）。
+* 作用域查找会在找到第一个匹配的标识符时停止。在多层的嵌套作用域中可以定义同名的标识符，这叫做“遮蔽效应”（内部的标识符“遮蔽”了外部的标识符），不会影响外部的变量值。
 * 抛开遮蔽效应，作用域查找始终从运行时所处的最内部作用域开始，逐级向外或者说向上进行，直到遇见第一个匹配的标识符为止。
 ~~~ JavaScript
 function foo(a) {
